--- a/MultiShop/MultiShop/Views/Shared/_Layout.cshtml
+++ b/MultiShop/MultiShop/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using MultiShop.Services;
+@inject LayoutService service
+@{
+    Dictionary<string, string> setting = await service.GetSettingAsync();
+}
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -182,9 +187,9 @@
             <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
                 <h5 class="text-secondary text-uppercase mb-4">Get In Touch</h5>
                 <p class="mb-4">No dolore ipsum accusam no lorem. Invidunt sed clita kasd clita et et dolor sed dolor. Rebum tempor no vero est magna amet no</p>
-                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>info@example.com</p>
-                <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+012 345 67890</p>
+                <p class="mb-2">@Html.Raw(setting["Locationicon"])  @setting["Location"]</p>
+                <p class="mb-2">@Html.Raw(setting["Mailicon"]) @setting["Mail"]</p>
+                <p class="mb-0">@Html.Raw(setting["Phoneicon"]) @setting["Phone"]</p>
             </div>
             <div class="col-lg-8 col-md-12">
                 <div class="row">
@@ -223,10 +228,10 @@
                         </form>
                         <h6 class="text-secondary text-uppercase mt-4 mb-3">Follow Us</h6>
                         <div class="d-flex">
-                            <a class="btn btn-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-primary btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-primary btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-primary btn-square mr-2" href="#">@Html.Raw(setting["Twitter"])</a>
+                            <a class="btn btn-primary btn-square mr-2" href="#">@Html.Raw(setting["Fb"])</a>
+                            <a class="btn btn-primary btn-square mr-2" href="#">@Html.Raw(setting["Instagram"])</a>
+                            <a class="btn btn-primary btn-square " href="#">@Html.Raw(setting["Linkedin"])</a>
                         </div>
                     </div>
                 </div>
